--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Fotógrafos de Argetina
 description: Comunidad Argentina de fotógrafos
-logo: https://media.fshoq.com/images/327/adult-middle-aged-man-photographer-with-canon-camera-327-small.jpg
+#logo: https://media.fshoq.com/images/327/adult-middle-aged-man-photographer-with-canon-camera-327-small.jpg
 show_downloads: false
 theme: jekyll-theme-minimal
